--- a/app/src/main/res/values-az/strings.xml
+++ b/app/src/main/res/values-az/strings.xml
@@ -553,9 +553,7 @@
   <string name="RegistrationActivity_enter_the_code_we_sent_to_s">%s nömrəsinə göndərdiyimiz şifrəni daxil et</string>
   <string name="RegistrationActivity_call">Zəng et</string>
   <!--RevealableMessageView-->
-  <!-- Removed by excludeNonTranslatables <string name="RevealableMessageView_photo">Şəkil</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="RevealableMessageView_video">Video</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="RevealableMessageView_outgoing_media">Media</string> -->
+  <string name="RevealableMessageView_media">Media</string>
   <!--ScribbleActivity-->
   <string name="ScribbleActivity_save_failure">Şəkilə olan dəyişiklikləri yadda saxlaya bilmədik</string>
   <!--Search-->
@@ -815,7 +813,6 @@
   <string name="QuoteView_audio">Səs</string>
   <string name="QuoteView_video">Video</string>
   <string name="QuoteView_photo">Şəkil</string>
-  <!-- Removed by excludeNonTranslatables <string name="QuoteView_media">Media mesajı</string> -->
   <string name="QuoteView_sticker">Sticker</string>
   <string name="QuoteView_document">Sənəd</string>
   <string name="QuoteView_you">Sən</string>
