--- a/app/src/main/res/values-bg/strings.xml
+++ b/app/src/main/res/values-bg/strings.xml
@@ -550,9 +550,7 @@
   <string name="RegistrationActivity_enter_the_code_we_sent_to_s">Въведете кода, който изпратихме на %s</string>
   <string name="RegistrationActivity_call">Обаждане</string>
   <!--RevealableMessageView-->
-  <!-- Removed by excludeNonTranslatables <string name="RevealableMessageView_photo">Снимка</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="RevealableMessageView_video">Видео</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="RevealableMessageView_outgoing_media">Медия</string> -->
+  <string name="RevealableMessageView_media">Медия</string>
   <!--ScribbleActivity-->
   <string name="ScribbleActivity_save_failure">Неуспешнп запазване на промененото изображение</string>
   <!--Search-->
@@ -818,7 +816,6 @@
   <string name="QuoteView_audio">Аудио</string>
   <string name="QuoteView_video">Видео</string>
   <string name="QuoteView_photo">Снимка</string>
-  <!-- Removed by excludeNonTranslatables <string name="QuoteView_media">Медийно съобщение</string> -->
   <string name="QuoteView_sticker">Стикер</string>
   <string name="QuoteView_document">Документ</string>
   <string name="QuoteView_you">Ти</string>
