--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -238,6 +238,8 @@
   <string name="ConversationFragment_failed_to_open_message">Nachricht konnte nicht geöffnet werden</string>
   <string name="ConversationFragment_you_can_swipe_to_the_right_reply">Zum schnellen Antworten kannst du auf jeder Nachricht nach rechts wischen</string>
   <string name="ConversationFragment_you_can_swipe_to_the_left_reply">Zum schnellen Antworten kannst du auf jeder Nachricht nach links wischen</string>
+  <!-- Removed by excludeNonTranslatables <string name="ConversationFragment_view_once_message_are_not_stored_in_your_conversation_history">Einmalig anzeigbare Nachrichten werden nicht in deinem Unterhaltungsverlauf gespeichert</string> -->
+  <string name="ConversationFragment_you_already_viewed_this_message">Du hast diese Nachricht bereits angezeigt</string>
   <!--ConversationListActivity-->
   <string name="ConversationListActivity_there_is_no_browser_installed_on_your_device">Auf deinem Gerät ist derzeit kein Browser installiert.</string>
   <!--ConversationListFragment-->
@@ -483,7 +485,7 @@
     <item quantity="other">Du kannst nicht mehr als %d Elemente teilen.</item>
   </plurals>
   <string name="MediaSendActivity_select_recipients_description">Empfänger auswählen</string>
-  <string name="MediaSendActivity_tap_here_to_make_this_message_disappear_after_it_is_viewed">Hier antippen, um diese Nachricht nach dem Ansehen verschwinden zu lassen.</string>
+  <string name="MediaSendActivity_tap_here_to_make_this_message_disappear_after_it_is_viewed">Hier antippen, um diese Nachricht nach dem Anzeigen verschwinden zu lassen.</string>
   <!--MediaRepository-->
   <string name="MediaRepository_all_media">Alle Medieninhalte</string>
   <!--MessageRecord-->
@@ -631,10 +633,10 @@
   <string name="RegistrationActivity_country_code_description">Landesvorwahl</string>
   <string name="RegistrationActivity_call">Mich anrufen</string>
   <!--RevealableMessageView-->
-  <!-- Removed by excludeNonTranslatables <string name="RevealableMessageView_photo">Foto</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="RevealableMessageView_video">Video</string> -->
+  <string name="RevealableMessageView_view_photo">Foto anzeigen</string>
+  <string name="RevealableMessageView_view_video">Video anzeigen</string>
   <string name="RevealableMessageView_viewed">Angesehen</string>
-  <!-- Removed by excludeNonTranslatables <string name="RevealableMessageView_outgoing_media">Medieninhalte</string> -->
+  <string name="RevealableMessageView_media">Medieninhalte</string>
   <!--ScribbleActivity-->
   <string name="ScribbleActivity_save_failure">Bildänderungen konnten nicht gespeichert werden</string>
   <!--Search-->
@@ -693,8 +695,9 @@ Schlüsselaustausch-Nachricht für eine ungültige Protokollversion empfangen</s
   <string name="ThreadRecord_missed_call">Entgangener Anruf</string>
   <string name="ThreadRecord_media_message">Nachricht mit Medieninhalten</string>
   <string name="ThreadRecord_sticker">Sticker</string>
-  <!-- Removed by excludeNonTranslatables <string name="ThreadRecord_disappearing_photo">Verschwindendes Foto</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ThreadRecord_disappearing_video">Verschwindendes Video</string> -->
+  <string name="ThreadRecord_view_once_photo">Einmalig anzeigbares Foto</string>
+  <string name="ThreadRecord_view_once_video">Einmalig anzeigbares Video</string>
+  <string name="ThreadRecord_view_once_media">Einmalig anzeigbare Medieninhalte</string>
   <string name="ThreadRecord_s_is_on_signal">%s ist bei Signal!</string>
   <string name="ThreadRecord_disappearing_messages_disabled">Verschwindende Nachrichten deaktiviert</string>
   <string name="ThreadRecord_disappearing_message_time_updated_to_s">Zeit für verschwindende Nachrichten auf %s festgelegt</string>
@@ -785,8 +788,8 @@ Schlüsselaustausch-Nachricht für eine ungültige Protokollversion empfangen</s
   <string name="MessageNotifier_mark_read">Gelesen</string>
   <string name="MessageNotifier_media_message">Nachricht mit Medieninhalten</string>
   <string name="MessageNotifier_sticker">Sticker</string>
-  <!-- Removed by excludeNonTranslatables <string name="MessageNotifier_disappearing_photo">Verschwindendes Foto</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="MessageNotifier_disappearing_video">Verschwindendes Video</string> -->
+  <string name="MessageNotifier_view_once_photo">Einmalig anzeigbares Foto</string>
+  <string name="MessageNotifier_view_once_video">Einmalig anzeigbares Video</string>
   <string name="MessageNotifier_reply">Antworten</string>
   <string name="MessageNotifier_signal_message">Signal-Nachricht</string>
   <string name="MessageNotifier_unsecured_sms">Unsichere SMS</string>
@@ -932,7 +935,7 @@ Schlüsselaustausch-Nachricht für eine ungültige Protokollversion empfangen</s
   <string name="QuoteView_audio">Audio</string>
   <string name="QuoteView_video">Video</string>
   <string name="QuoteView_photo">Foto</string>
-  <!-- Removed by excludeNonTranslatables <string name="QuoteView_media">Nachricht mit Medieninhalten</string> -->
+  <string name="QuoteView_view_once_media">Einmalig anzeigbare Medieninhalte</string>
   <string name="QuoteView_sticker">Sticker</string>
   <string name="QuoteView_document">Dokument</string>
   <string name="QuoteView_you">Du</string>
