--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -228,6 +228,7 @@
   <string name="ConversationFragment_failed_to_open_message">メッセージの開封に失敗しました</string>
   <string name="ConversationFragment_you_can_swipe_to_the_right_reply">メッセージを右にスワイプすると返信できます。</string>
   <string name="ConversationFragment_you_can_swipe_to_the_left_reply">メッセージを左にスワイプすると返信できます。</string>
+  <string name="ConversationFragment_you_already_viewed_this_message">このメッセージは閲覧済みです</string>
   <!--ConversationListActivity-->
   <string name="ConversationListActivity_there_is_no_browser_installed_on_your_device">ブラウザがインストールされていません</string>
   <!--ConversationListFragment-->
@@ -610,10 +611,9 @@
   <string name="RegistrationActivity_country_code_description">国番号</string>
   <string name="RegistrationActivity_call">通話</string>
   <!--RevealableMessageView-->
-  <!-- Removed by excludeNonTranslatables <string name="RevealableMessageView_photo">写真</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="RevealableMessageView_video">動画</string> -->
+  <string name="RevealableMessageView_view_photo">写真を見る</string>
   <string name="RevealableMessageView_viewed">閲覧済み</string>
-  <!-- Removed by excludeNonTranslatables <string name="RevealableMessageView_outgoing_media">メディア</string> -->
+  <string name="RevealableMessageView_media">メディア</string>
   <!--ScribbleActivity-->
   <string name="ScribbleActivity_save_failure">画像の変更を保存できませんでした</string>
   <!--Search-->
@@ -671,8 +671,6 @@
   <string name="ThreadRecord_missed_call">不在着信</string>
   <string name="ThreadRecord_media_message">メディアでのメッセージ</string>
   <string name="ThreadRecord_sticker">ステッカー</string>
-  <!-- Removed by excludeNonTranslatables <string name="ThreadRecord_disappearing_photo">消える写真</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ThreadRecord_disappearing_video">消える動画</string> -->
   <string name="ThreadRecord_s_is_on_signal">%sがSignalに登録しています！</string>
   <string name="ThreadRecord_disappearing_messages_disabled">消えるメッセージが無効にされました</string>
   <string name="ThreadRecord_disappearing_message_time_updated_to_s">消えるメッセージの消去時間が%sに設定されました</string>
@@ -763,8 +761,6 @@
   <string name="MessageNotifier_mark_read">既読にする</string>
   <string name="MessageNotifier_media_message">メディアメッセージ</string>
   <string name="MessageNotifier_sticker">ステッカー</string>
-  <!-- Removed by excludeNonTranslatables <string name="MessageNotifier_disappearing_photo">消える写真</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="MessageNotifier_disappearing_video">消える動画</string> -->
   <string name="MessageNotifier_reply">返信</string>
   <string name="MessageNotifier_signal_message">Signalメッセージ</string>
   <string name="MessageNotifier_unsecured_sms">安全でないSMS</string>
@@ -909,7 +905,6 @@
   <string name="QuoteView_audio">音声</string>
   <string name="QuoteView_video">動画</string>
   <string name="QuoteView_photo">写真</string>
-  <!-- Removed by excludeNonTranslatables <string name="QuoteView_media">メディアメッセージ</string> -->
   <string name="QuoteView_sticker">ステッカー</string>
   <string name="QuoteView_document">ドキュメント</string>
   <string name="QuoteView_you">あなた</string>
