--- a/app/src/main/res/values-ku/strings.xml
+++ b/app/src/main/res/values-ku/strings.xml
@@ -518,9 +518,7 @@
   <string name="RegistrationActivity_enter_your_phone_number_to_get_started">Ji bo destpêkirinê jimara xwe ya telefonê binivîse</string>
   <string name="RegistrationActivity_call">Gazî</string>
   <!--RevealableMessageView-->
-  <!-- Removed by excludeNonTranslatables <string name="RevealableMessageView_photo">Wêne</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="RevealableMessageView_video">Vîdyo</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="RevealableMessageView_outgoing_media">Medya</string> -->
+  <string name="RevealableMessageView_media">Medya</string>
   <!--ScribbleActivity-->
   <string name="ScribbleActivity_save_failure">Guhertinên weneyê nehate tomarkirin</string>
   <!--Search-->
@@ -768,7 +766,6 @@
   <string name="QuoteView_audio">Deng</string>
   <string name="QuoteView_video">Vidyo</string>
   <string name="QuoteView_photo">Wêne</string>
-  <!-- Removed by excludeNonTranslatables <string name="QuoteView_media">Peyama medyayê</string> -->
   <string name="QuoteView_document">Pelge</string>
   <string name="QuoteView_you">Tu</string>
   <string name="QuoteView_original_missing">Peyama orjînal nehate dîtin</string>
