--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -258,6 +258,8 @@
   <string name="ConversationFragment_failed_to_open_message">Nie udało się otworzyć wiadomości</string>
   <string name="ConversationFragment_you_can_swipe_to_the_right_reply">Możesz przesunąć wiadomość w prawo, by szybko odpowiedzieć.</string>
   <string name="ConversationFragment_you_can_swipe_to_the_left_reply">Możesz przesunąć wiadomość w lewo, by szybko odpowiedzieć.</string>
+  <!-- Removed by excludeNonTranslatables <string name="ConversationFragment_view_once_message_are_not_stored_in_your_conversation_history">Wiadomości jednorazowe nie są przechowywane w Twojej historii konwersacji</string> -->
+  <string name="ConversationFragment_you_already_viewed_this_message">Już widziałeś(aś) tę wiadomość</string>
   <!--ConversationListActivity-->
   <string name="ConversationListActivity_there_is_no_browser_installed_on_your_device">Twoje urządzenie nie ma zainstalowanej przeglądarki.</string>
   <!--ConversationListFragment-->
@@ -678,10 +680,10 @@
   <string name="RegistrationActivity_country_code_description">Numer kierunkowy</string>
   <string name="RegistrationActivity_call">Zadzwoń</string>
   <!--RevealableMessageView-->
-  <!-- Removed by excludeNonTranslatables <string name="RevealableMessageView_photo">Zdjęcie</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="RevealableMessageView_video">Wideo</string> -->
+  <string name="RevealableMessageView_view_photo">Wyświetl zdjęcie</string>
+  <string name="RevealableMessageView_view_video">Obejrzyj video</string>
   <string name="RevealableMessageView_viewed">Wyświetlono</string>
-  <!-- Removed by excludeNonTranslatables <string name="RevealableMessageView_outgoing_media">Multimedia</string> -->
+  <string name="RevealableMessageView_media">Multimedia</string>
   <!--ScribbleActivity-->
   <string name="ScribbleActivity_save_failure">Nie udało się zapisać zmian obrazu</string>
   <!--Search-->
@@ -740,8 +742,9 @@ Otrzymano wiadomość wymiany klucz dla niepoprawnej wersji protokołu.</string>
   <string name="ThreadRecord_missed_call">Nieodebrane połączenie</string>
   <string name="ThreadRecord_media_message">Wiadomość multimedialna</string>
   <string name="ThreadRecord_sticker">Naklejka</string>
-  <!-- Removed by excludeNonTranslatables <string name="ThreadRecord_disappearing_photo">Znikające zdjęcie</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ThreadRecord_disappearing_video">Znikające wideo</string> -->
+  <string name="ThreadRecord_view_once_photo">Zdjęcie jednorazowe</string>
+  <string name="ThreadRecord_view_once_video">Wideo jednorazowe</string>
+  <string name="ThreadRecord_view_once_media">Multimedia jednorazowe</string>
   <string name="ThreadRecord_s_is_on_signal">%s jest w Signal!</string>
   <string name="ThreadRecord_disappearing_messages_disabled">Znikające wiadomości zostały wyłączone</string>
   <string name="ThreadRecord_disappearing_message_time_updated_to_s">Czas znikania wiadomości ustawiony na %s</string>
@@ -832,8 +835,8 @@ Otrzymano wiadomość wymiany klucz dla niepoprawnej wersji protokołu.</string>
   <string name="MessageNotifier_mark_read">Przeczytane</string>
   <string name="MessageNotifier_media_message">Wiadomość multimedialna</string>
   <string name="MessageNotifier_sticker">Naklejka</string>
-  <!-- Removed by excludeNonTranslatables <string name="MessageNotifier_disappearing_photo">Znikające zdjęcie</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="MessageNotifier_disappearing_video">Znikające wideo</string> -->
+  <string name="MessageNotifier_view_once_photo">Zdjęcie jednorazowe</string>
+  <string name="MessageNotifier_view_once_video">Wideo jednorazowe</string>
   <string name="MessageNotifier_reply">Odpowiedź</string>
   <string name="MessageNotifier_signal_message">Wiadomość Signal</string>
   <string name="MessageNotifier_unsecured_sms">Nieszyfrowany SMS</string>
@@ -981,7 +984,7 @@ Otrzymano wiadomość wymiany klucz dla niepoprawnej wersji protokołu.</string>
   <string name="QuoteView_audio">Dźwięk</string>
   <string name="QuoteView_video">Wideo</string>
   <string name="QuoteView_photo">Zdjęcie</string>
-  <!-- Removed by excludeNonTranslatables <string name="QuoteView_media">Wiadomość multimedialna</string> -->
+  <string name="QuoteView_view_once_media">Multimedia jednorazowe</string>
   <string name="QuoteView_sticker">Naklejka</string>
   <string name="QuoteView_document">Dokument</string>
   <string name="QuoteView_you">Ty</string>
