--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -258,6 +258,8 @@
   <string name="ConversationFragment_failed_to_open_message">Не удалось открыть сообщение</string>
   <string name="ConversationFragment_you_can_swipe_to_the_right_reply">Вы можете провести вправо по любому сообщению, чтобы быстро ответить</string>
   <string name="ConversationFragment_you_can_swipe_to_the_left_reply">Вы можете провести влево по любому сообщению, чтобы быстро ответить</string>
+  <!-- Removed by excludeNonTranslatables <string name="ConversationFragment_view_once_message_are_not_stored_in_your_conversation_history">Одноразовые сообщения не сохраняются в истории вашего разговора</string> -->
+  <string name="ConversationFragment_you_already_viewed_this_message">Вы уже просмотрели это сообщение</string>
   <!--ConversationListActivity-->
   <string name="ConversationListActivity_there_is_no_browser_installed_on_your_device">На вашем устройстве не установлен браузер.</string>
   <!--ConversationListFragment-->
@@ -676,10 +678,10 @@
   <string name="RegistrationActivity_country_code_description">Код страны</string>
   <string name="RegistrationActivity_call">Позвонить</string>
   <!--RevealableMessageView-->
-  <!-- Removed by excludeNonTranslatables <string name="RevealableMessageView_photo">Фото</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="RevealableMessageView_video">Видео</string> -->
+  <string name="RevealableMessageView_view_photo">Просмотреть фотографию</string>
+  <string name="RevealableMessageView_view_video">Просмотреть видео</string>
   <string name="RevealableMessageView_viewed">Просмотрено</string>
-  <!-- Removed by excludeNonTranslatables <string name="RevealableMessageView_outgoing_media">Медиа</string> -->
+  <string name="RevealableMessageView_media">Медиа</string>
   <!--ScribbleActivity-->
   <string name="ScribbleActivity_save_failure">Не удалось сохранить изменения изображения</string>
   <!--Search-->
@@ -741,8 +743,9 @@
   <string name="ThreadRecord_missed_call">Пропущен звонок</string>
   <string name="ThreadRecord_media_message">Медиа-сообщение</string>
   <string name="ThreadRecord_sticker">Стикер</string>
-  <!-- Removed by excludeNonTranslatables <string name="ThreadRecord_disappearing_photo">Исчезающая фотография</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ThreadRecord_disappearing_video">Исчезающее видео</string> -->
+  <string name="ThreadRecord_view_once_photo">Одноразовое фото</string>
+  <string name="ThreadRecord_view_once_video">Одноразовое видео</string>
+  <string name="ThreadRecord_view_once_media">Одноразовое медиа</string>
   <string name="ThreadRecord_s_is_on_signal">%s теперь в Signal!</string>
   <string name="ThreadRecord_disappearing_messages_disabled">Исчезающие сообщения отключены</string>
   <string name="ThreadRecord_disappearing_message_time_updated_to_s">Время исчезновения сообщений – %s</string>
@@ -833,8 +836,8 @@
   <string name="MessageNotifier_mark_read">Прочитано</string>
   <string name="MessageNotifier_media_message">Медиа-сообщение</string>
   <string name="MessageNotifier_sticker">Стикер</string>
-  <!-- Removed by excludeNonTranslatables <string name="MessageNotifier_disappearing_photo">Исчезающая фотография</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="MessageNotifier_disappearing_video">Исчезающее видео</string> -->
+  <string name="MessageNotifier_view_once_photo">Одноразовое фото</string>
+  <string name="MessageNotifier_view_once_video">Одноразовое видео</string>
   <string name="MessageNotifier_reply">Ответить</string>
   <string name="MessageNotifier_signal_message">Сообщение Signal</string>
   <string name="MessageNotifier_unsecured_sms">Незащищенное SMS</string>
@@ -982,7 +985,7 @@
   <string name="QuoteView_audio">Аудио</string>
   <string name="QuoteView_video">Видео</string>
   <string name="QuoteView_photo">Фото</string>
-  <!-- Removed by excludeNonTranslatables <string name="QuoteView_media">Медиа-сообщение</string> -->
+  <string name="QuoteView_view_once_media">Одноразовое медиа</string>
   <string name="QuoteView_sticker">Стикер</string>
   <string name="QuoteView_document">Документ</string>
   <string name="QuoteView_you">Вы</string>
