--- a/app/src/main/res/values-ta/strings.xml
+++ b/app/src/main/res/values-ta/strings.xml
@@ -591,10 +591,9 @@
   <string name="RegistrationActivity_country_code_description">நாட்டின் குறியீடு</string>
   <string name="RegistrationActivity_call">அழை</string>
   <!--RevealableMessageView-->
-  <!-- Removed by excludeNonTranslatables <string name="RevealableMessageView_photo">புகைப்படம் </string> -->
-  <!-- Removed by excludeNonTranslatables <string name="RevealableMessageView_video">காணொளி</string> -->
+  <string name="RevealableMessageView_view_photo">புகைப்படத்தைக் காண்க</string>
   <string name="RevealableMessageView_viewed">பார்க்கப்பட்டவை</string>
-  <!-- Removed by excludeNonTranslatables <string name="RevealableMessageView_outgoing_media">ஊடகம்</string> -->
+  <string name="RevealableMessageView_media">ஊடகம்</string>
   <!--ScribbleActivity-->
   <string name="ScribbleActivity_save_failure">பட மாற்றங்களைச் சேமிப்பதில் தோல்வி</string>
   <!--Search-->
@@ -654,8 +653,6 @@
   <string name="ThreadRecord_missed_call">தவறிய அழைப்பு</string>
   <string name="ThreadRecord_media_message">பல்லூடகச் செய்தி</string>
   <string name="ThreadRecord_sticker">ஓட்டி</string>
-  <!-- Removed by excludeNonTranslatables <string name="ThreadRecord_disappearing_photo">காணாமல் போகின்ற புகைப்படம்</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ThreadRecord_disappearing_video">காணாமல் போகின்ற வீடியோ</string> -->
   <string name="ThreadRecord_s_is_on_signal">%s Signal உள்ளது!</string>
   <string name="ThreadRecord_disappearing_messages_disabled">காணாமல் போன செய்திகள் முடக்கப்பட்டுள்ளன</string>
   <string name="ThreadRecord_disappearing_message_time_updated_to_s">காணாமல் போன செய்தி நேரம் %s ஆக அமைக்கப்பட்டுள்ளது</string>
@@ -735,8 +732,6 @@
   <string name="MessageNotifier_mark_read">படித்தாக குறியிடு</string>
   <string name="MessageNotifier_media_message">மீடியா செய்தி</string>
   <string name="MessageNotifier_sticker">ஓட்டி</string>
-  <!-- Removed by excludeNonTranslatables <string name="MessageNotifier_disappearing_photo">காணாமல் போன புகைப்படம்</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="MessageNotifier_disappearing_video">காணாமல் போன வீடியோ</string> -->
   <string name="MessageNotifier_reply">மறுமொழி கூறு</string>
   <string name="MessageNotifier_signal_message">Signal செய்தி</string>
   <string name="MessageNotifier_unsecured_sms">பாதுகாப்பற்ற எஸ்.எம்.எஸ்</string>
@@ -875,7 +870,6 @@
   <string name="QuoteView_audio">கேட்பொலி</string>
   <string name="QuoteView_video">காணொளி</string>
   <string name="QuoteView_photo">புகைப்பட</string>
-  <!-- Removed by excludeNonTranslatables <string name="QuoteView_media">பல்லூடகச் செய்தி</string> -->
   <string name="QuoteView_sticker">ஓட்டி</string>
   <string name="QuoteView_document">ஆவணம்</string>
   <string name="QuoteView_you">நீங்கள்</string>
