--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -238,6 +238,8 @@
   <string name="ConversationFragment_failed_to_open_message">İleti açılamadı</string>
   <string name="ConversationFragment_you_can_swipe_to_the_right_reply">Herhangi bir iletiyi hızlıca yanıtlamak için sağa kaydırabilirsiniz</string>
   <string name="ConversationFragment_you_can_swipe_to_the_left_reply">Herhangi bir iletiyi hızlıca yanıtlamak için sola kaydırabilirsiniz</string>
+  <!-- Removed by excludeNonTranslatables <string name="ConversationFragment_view_once_message_are_not_stored_in_your_conversation_history">Tek görümlük iletiler sohbet geçmişinizde depolanmaz</string> -->
+  <string name="ConversationFragment_you_already_viewed_this_message">Bu iletiyi zaten görüntülediniz</string>
   <!--ConversationListActivity-->
   <string name="ConversationListActivity_there_is_no_browser_installed_on_your_device">Cihazınıza yüklü tarayıcı bulunmamaktadır.</string>
   <!--ConversationListFragment-->
@@ -640,10 +642,10 @@
   <string name="RegistrationActivity_country_code_description">Ülke kodu</string>
   <string name="RegistrationActivity_call">Ara</string>
   <!--RevealableMessageView-->
-  <!-- Removed by excludeNonTranslatables <string name="RevealableMessageView_photo">Fotoğraf</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="RevealableMessageView_video">Video</string> -->
+  <string name="RevealableMessageView_view_photo">Fotoğrafı Görüntüle</string>
+  <string name="RevealableMessageView_view_video">Videoyu Görüntüle</string>
   <string name="RevealableMessageView_viewed">Görüldü</string>
-  <!-- Removed by excludeNonTranslatables <string name="RevealableMessageView_outgoing_media">İçerik</string> -->
+  <string name="RevealableMessageView_media">İçerik</string>
   <!--ScribbleActivity-->
   <string name="ScribbleActivity_save_failure">Görüntü değişiklikleri kaydedilemedi</string>
   <!--Search-->
@@ -703,8 +705,9 @@ Geçersiz protokol sürümünde anahtar değişim iletisi alındı.</string>
   <string name="ThreadRecord_missed_call">Cevapsız arama</string>
   <string name="ThreadRecord_media_message">İçerik iletisi</string>
   <string name="ThreadRecord_sticker">Çıkartma</string>
-  <!-- Removed by excludeNonTranslatables <string name="ThreadRecord_disappearing_photo">Kaybolan fotoğraf</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ThreadRecord_disappearing_video">Kaybolan video</string> -->
+  <string name="ThreadRecord_view_once_photo">Tek görümlük fotoğraf</string>
+  <string name="ThreadRecord_view_once_video">Tek görümlük video</string>
+  <string name="ThreadRecord_view_once_media">Tek görümlük içerik</string>
   <string name="ThreadRecord_s_is_on_signal">%s Signal\'e katıldı!</string>
   <string name="ThreadRecord_disappearing_messages_disabled">Kaybolan iletiler devre dışı</string>
   <string name="ThreadRecord_disappearing_message_time_updated_to_s">Kaybolan ileti süresi %s olarak ayarlandı</string>
@@ -795,8 +798,8 @@ Geçersiz protokol sürümünde anahtar değişim iletisi alındı.</string>
   <string name="MessageNotifier_mark_read">Okundu işaretle</string>
   <string name="MessageNotifier_media_message">İçerik iletisi</string>
   <string name="MessageNotifier_sticker">Çıkartma</string>
-  <!-- Removed by excludeNonTranslatables <string name="MessageNotifier_disappearing_photo">Kaybolan fotoğraf</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="MessageNotifier_disappearing_video">Kaybolan video</string> -->
+  <string name="MessageNotifier_view_once_photo">Tek görümlük fotoğraf</string>
+  <string name="MessageNotifier_view_once_video">Tek görümlük video</string>
   <string name="MessageNotifier_reply">Cevapla</string>
   <string name="MessageNotifier_signal_message">Signal İletisi</string>
   <string name="MessageNotifier_unsecured_sms">Şifresiz SMS</string>
@@ -942,7 +945,7 @@ Geçersiz protokol sürümünde anahtar değişim iletisi alındı.</string>
   <string name="QuoteView_audio">Ses</string>
   <string name="QuoteView_video">Video</string>
   <string name="QuoteView_photo">Fotoğraf</string>
-  <!-- Removed by excludeNonTranslatables <string name="QuoteView_media">İçerik iletisi</string> -->
+  <string name="QuoteView_view_once_media">Tek görümlük içerik</string>
   <string name="QuoteView_sticker">Çıkartma</string>
   <string name="QuoteView_document">Doküman</string>
   <string name="QuoteView_you">Siz</string>
