--- a/app/src/main/res/values-ur/strings.xml
+++ b/app/src/main/res/values-ur/strings.xml
@@ -586,10 +586,8 @@
   <string name="RegistrationActivity_country_code_description">ملک کا کوڈ</string>
   <string name="RegistrationActivity_call">کال</string>
   <!--RevealableMessageView-->
-  <!-- Removed by excludeNonTranslatables <string name="RevealableMessageView_photo">تصویر</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="RevealableMessageView_video">ویڈیو</string> -->
   <string name="RevealableMessageView_viewed">دیکھا ہوا</string>
-  <!-- Removed by excludeNonTranslatables <string name="RevealableMessageView_outgoing_media">میڈیا</string> -->
+  <string name="RevealableMessageView_media">میڈیا</string>
   <!--ScribbleActivity-->
   <string name="ScribbleActivity_save_failure">تصویر محفوظ کرنے کی تبدیلی میں ناکامی</string>
   <!--Search-->
@@ -648,8 +646,6 @@
   <string name="ThreadRecord_missed_call">کال مس ہو گئی</string>
   <string name="ThreadRecord_media_message">میڈیا پیغام</string>
   <string name="ThreadRecord_sticker">اسٹیکر</string>
-  <!-- Removed by excludeNonTranslatables <string name="ThreadRecord_disappearing_photo">تصویر غائب ہو رہی ہے</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ThreadRecord_disappearing_video">ویڈیو غائب ہو رہی ہے</string> -->
   <string name="ThreadRecord_s_is_on_signal">%s Signal پر ہے!</string>
   <string name="ThreadRecord_disappearing_messages_disabled">غیر فعال پیغامات غائب ہو رہے ہیں</string>
   <string name="ThreadRecord_disappearing_message_time_updated_to_s">غائب پیغام ٹائم %s سے ترتیب دے رہے ہیں</string>
@@ -729,8 +725,6 @@
   <string name="MessageNotifier_mark_read">پڑھے ہوئے پر نشان لگائیں</string>
   <string name="MessageNotifier_media_message">میڈیا پیغام</string>
   <string name="MessageNotifier_sticker">اسٹیکر</string>
-  <!-- Removed by excludeNonTranslatables <string name="MessageNotifier_disappearing_photo">تصویر غائب ہو رہی ہے</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="MessageNotifier_disappearing_video">ویڈیو غائب ہو رہی ہے</string> -->
   <string name="MessageNotifier_reply">جواب دیں</string>
   <string name="MessageNotifier_signal_message">Signal پیغامات</string>
   <string name="MessageNotifier_unsecured_sms">غیر محفوظ ایس ایم ایس</string>
@@ -869,7 +863,6 @@
   <string name="QuoteView_audio">آڈیو</string>
   <string name="QuoteView_video">ویڈیو</string>
   <string name="QuoteView_photo">تصویر</string>
-  <!-- Removed by excludeNonTranslatables <string name="QuoteView_media">میڈیا پیغام</string> -->
   <string name="QuoteView_sticker">اسٹیکر</string>
   <string name="QuoteView_document">دستاویز</string>
   <string name="QuoteView_you">تم</string>
