--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -228,6 +228,8 @@
   <string name="ConversationFragment_failed_to_open_message">開啟訊息失敗</string>
   <string name="ConversationFragment_you_can_swipe_to_the_right_reply">你可以在任何訊息上向右滑動以快速回覆</string>
   <string name="ConversationFragment_you_can_swipe_to_the_left_reply">你可以在任何訊息上向左滑動以快速回覆</string>
+  <!-- Removed by excludeNonTranslatables <string name="ConversationFragment_view_once_message_are_not_stored_in_your_conversation_history">一次性訊息不會儲存在你的對話歷程中</string> -->
+  <string name="ConversationFragment_you_already_viewed_this_message">你已經看過這個訊息</string>
   <!--ConversationListActivity-->
   <string name="ConversationListActivity_there_is_no_browser_installed_on_your_device">您的裝置上未安裝瀏覽器。</string>
   <!--ConversationListFragment-->
@@ -614,10 +616,10 @@
   <string name="RegistrationActivity_country_code_description">國碼</string>
   <string name="RegistrationActivity_call">撥打</string>
   <!--RevealableMessageView-->
-  <!-- Removed by excludeNonTranslatables <string name="RevealableMessageView_photo">照片</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="RevealableMessageView_video">影片</string> -->
+  <string name="RevealableMessageView_view_photo">查看照片</string>
+  <string name="RevealableMessageView_view_video">觀賞影片</string>
   <string name="RevealableMessageView_viewed">已查看</string>
-  <!-- Removed by excludeNonTranslatables <string name="RevealableMessageView_outgoing_media">媒體</string> -->
+  <string name="RevealableMessageView_media">媒體</string>
   <!--ScribbleActivity-->
   <string name="ScribbleActivity_save_failure">無法儲存圖片的變更</string>
   <!--Search-->
@@ -678,8 +680,9 @@
   <string name="ThreadRecord_missed_call">未接來電</string>
   <string name="ThreadRecord_media_message">媒體訊息</string>
   <string name="ThreadRecord_sticker">貼圖</string>
-  <!-- Removed by excludeNonTranslatables <string name="ThreadRecord_disappearing_photo">銷毀照片</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="ThreadRecord_disappearing_video">銷毀影片</string> -->
+  <string name="ThreadRecord_view_once_photo">一次性照片</string>
+  <string name="ThreadRecord_view_once_video">一次性影片</string>
+  <string name="ThreadRecord_view_once_media">一次性多媒體檔案</string>
   <string name="ThreadRecord_s_is_on_signal">%s 在 Signal 了！</string>
   <string name="ThreadRecord_disappearing_messages_disabled">自動銷毀訊息功能已被關閉。</string>
   <string name="ThreadRecord_disappearing_message_time_updated_to_s">訊息銷毀時間設定為 %s</string>
@@ -771,8 +774,8 @@
   <string name="MessageNotifier_mark_read">標示已讀</string>
   <string name="MessageNotifier_media_message">媒體訊息</string>
   <string name="MessageNotifier_sticker">貼圖</string>
-  <!-- Removed by excludeNonTranslatables <string name="MessageNotifier_disappearing_photo">銷毀照片</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="MessageNotifier_disappearing_video">銷毀影片</string> -->
+  <string name="MessageNotifier_view_once_photo">一次性照片</string>
+  <string name="MessageNotifier_view_once_video">一次性影片</string>
   <string name="MessageNotifier_reply">回覆</string>
   <string name="MessageNotifier_signal_message">Signal 訊息</string>
   <string name="MessageNotifier_unsecured_sms">不安全的簡訊</string>
@@ -917,7 +920,7 @@
   <string name="QuoteView_audio">音訊</string>
   <string name="QuoteView_video">影片</string>
   <string name="QuoteView_photo">照片</string>
-  <!-- Removed by excludeNonTranslatables <string name="QuoteView_media">媒體訊息</string> -->
+  <string name="QuoteView_view_once_media">一次性多媒體檔案</string>
   <string name="QuoteView_sticker">貼圖</string>
   <string name="QuoteView_document">文件</string>
   <string name="QuoteView_you">您</string>
